# BioSig-evaluation

./: .gitignore  INeuron_class.py  Makefile  README.md  izhikevich_neurons.py  libs.py  main.py  n_values.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  visualizations.ipynb
.github/workflows/: publish.yml  tests.yml
CPP/Neural_Simulator/: Neural_Simulator.cpp  Neural_Simulator.sln  Neural_Simulator.vcxproj  Neural_Simulator.vcxproj.filters
CPP/Neural_Simulator/Models/: Log.cpp  Log.h  Neuron.cpp  Neuron.h
CPP/Neural_Simulator/x64/Debug/: Neural_Simulator.exe.recipe  Neural_Simulator.ilk  Neural_Simulator.vcxproj.FileListAbsolute.txt  vc143.idb
CPP/Neural_Simulator/x64/Debug/Neural_Simulator.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Neural_Simulator.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PYTHON/: NetworkModels.py  izhikevich_neurons.py  neuron_types.py
src/biosig.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/biosig/eeg/: izhikevich.py  simulations.py
src/brainx/: NetworkModels.py  izhikevich_neurons.py
src/medsig/: __init__.py  analysis.py  version.py
src/medsig/eeg/: analysis.py  izhikevich.py
src/medsignal/eeg/: izhikevich.py
tests/: izhikevich_network_test.py  izhikevich_neuron_test.py  test_izh_network.py  test_izh_neurons.py  test_izhikevich.py
